-
Bug
-
Resolution: Done
-
P2: Important
-
Qt Creator 4.3.0-beta1
-
None
-
Windows 7, Qt Creator daily build from Feb. 6: qt-creator-enterprise-windows-x86-4.3.0-beta1_848.exe
-
3602f903e5b05b2197dc847f1ffc88801a266750
The Projects view does not show the contents of the open project.
For Gerrit Dashboard: QTCREATORBUG-17690 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
185057,2 | ProjectExplorer: Ensure the FLatModel is build initially | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |
192549,1 | ProjectExplorer: Ensure the FLatModel is build initially | 4.2 | qt-creator/qt-creator | Status: ABANDONED | 0 | 0 |
192551,3 | ProjectExplorer: Ensure the FlatModel is build initially | 4.3 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |