ProjectExplorer: Ensure the FLatModel is build initially

If the FlatModel is created after a project is opened,
no update was triggered.
Therefore a lazily created ProjectTreeWidget was empty.

Task-number:  QTCREATORBUG-17690
Change-Id: I3c7d1fe63471127ff2d4b344d2341ccf6c3c93ff
Reviewed-by: hjk <hjk@qt.io>